--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,12 @@ license = "MIT"
 
 [dependencies]
 anyhow = { version = "1.0.100" }
+ciborium = { version = "0.2.2" }
 clap = { version = "4", features = ["derive"] }
+hex = { version = "0.4.3" }
 mithril-client = { version = "0.13.2" }
+serde = { version = "1.0.228" }
 serde_json = { version = "1.0.149" }
+serde_yaml = { version = "0.9.34+deprecated" }
 tokio = { version = "1.28.2", features = ["full"] }
+ciborium-io = "0.2.2"
