Read hex-encoded transaction from stdin and compute txid using pallas

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,10 @@ license = "MIT"
 [dependencies]
 anyhow = { version = "1.0.100" }
 ciborium = { version = "0.2.2" }
-clap = { version = "4", features = ["derive"] }
+ciborium-io = "0.2.2"
 hex = { version = "0.4.3" }
 mithril-client = { version = "0.13.2" }
+pallas = { version = "1.0.0-alpha.4" }
 serde = { version = "1.0.228" }
-serde_json = { version = "1.0.149" }
 serde_yaml = { version = "0.9.34+deprecated" }
 tokio = { version = "1.28.2", features = ["full"] }
-ciborium-io = "0.2.2"
