--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,9 @@ anyhow = { version = "1.0.100" }
 ciborium = { version = "0.2.2" }
 ciborium-io = "0.2.2"
 hex = { version = "0.4.3" }
+mithril-aggregator-client = { version = "0.1.8" }
 mithril-client = { version = "0.13.2" }
+mithril-common = { version = "0.6.43" }
 pallas = { version = "1.0.0-alpha.4" }
 serde = { version = "1.0.228" }
 serde_yaml = { version = "0.9.34+deprecated" }
